@@ -1,13 +1,17 @@
 package com.jingcai.apps.common.lang.encrypt;
 
 import com.jingcai.apps.common.lang.exception.Exceptions;
-import sun.misc.BASE64Decoder;
+import org.apache.commons.codec.binary.Base64;
 import sun.misc.BASE64Encoder;
+
+import java.io.UnsupportedEncodingException;
 
 /**
  * Created by lejing on 16/1/23.
  */
 public class Base64Util {
+
+	public static final String UTF_8 = "UTF-8";
 
 	/**
 	 * BASE64解密
@@ -18,10 +22,13 @@ public class Base64Util {
 	 */
 	public static byte[] decrypt(String key) {
 		try {
-			return new BASE64Decoder().decodeBuffer(key);
-		} catch (Exception e) {
+			return decrypt(key.getBytes(UTF_8));
+		} catch (UnsupportedEncodingException e) {
 			throw Exceptions.unchecked(e);
 		}
+	}
+	public static byte[] decrypt(byte[] key) {
+			return Base64.encodeBase64(key);
 	}
 
 	/**
@@ -32,6 +39,10 @@ public class Base64Util {
 	 * @throws Exception
 	 */
 	public static String encrypt(byte[] key) {
-		return new BASE64Encoder().encodeBuffer(key);
+		try {
+			return new String(Base64.encodeBase64(key), UTF_8);
+		} catch (UnsupportedEncodingException e) {
+			throw Exceptions.unchecked(e);
+		}
 	}
 }
